Make sure tree icons are aligned to the right (#1922)

--- a/src/LayerTree/LayerTreeNode/LayerTreeNode.less
+++ b/src/LayerTree/LayerTreeNode/LayerTreeNode.less
@@ -5,3 +5,9 @@
     opacity: 0.5;
   }
 }
+
+.react-geo-layertree {
+  .ant-tree-treenode {
+    width: 100%;
+  }
+}
